--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddTopicActivity"></activity>
+        <activity android:name=".AddTopicActivity" />
         <activity android:name=".AccountSetting" />
         <activity android:name=".RegisterActivity" />
         <activity
